Add section light

--- a/index.html
+++ b/index.html
@@ -18,20 +18,35 @@
                 <a class="navbar-brand" href="#">
                 <img src="pictures/Logo.png" alt="" width="35" height="35" class="d-inline-block align-top"> Architect</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span></button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#">Home דף הבית<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Me</a>
+                            <a class="nav-link" href="#">About Me על עצמי</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio תיק עבודות</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Model building</a>
+                                <a class="dropdown-item" href="#">תוצרת הארץ</a>
+                                <a class="dropdown-item" href="#">Sunergy</a>
+                                <a class="dropdown-item" href="#">Make a change</a>
+                                <a class="dropdown-item" href="#">אשדודית</a>
+                                <a class="dropdown-item" href="#">Street Hotel</a>
+                                <a class="dropdown-item" href="#">עכו עיר של "סינטור" תרבותי</a>
+                                <a class="dropdown-item" href="#">בית ספר חילוץ והצלה ימית</a>
+                                <a class="dropdown-item" href="#">שלומציון</a>
+                                <a class="dropdown-item" href="#">בית-כנסת "שירה חדשה"
+</a>
+                                <a class="dropdown-item" href="#">קולנוע אורות</a>
+                                <a class="dropdown-item" href="#">עיצוב אדריכלי</a>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Model building בניית מודלים</a>
                         </li>
                     </ul>
                 </div>
@@ -98,25 +113,34 @@
                     </div>
                     <div class="col"></div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="btnWrapper">
+                            <button type="button" class="btn btn-lg homeBtn" data-toggle="modal" data-target="#homeModal">
+                                Launch demo modal
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!--Section Two-->
             <div class="sectionDark">
                 <div class="row">
                     <div class="col"></div>
-                    <div dir="rtl" class="col-sm-12 col-lg-10">
+                    <div dir="rtl" class="col-sm-12 col-lg-8">
                         <div class="row">
                             <div class="col-sm-12 col-md-4">
                                 <img class="img-fluid" src="pictures/Profile.jpg">
                             </div>
-                            <div class="col-sm-12 col-md-8 col-lg-4">
+                            <div class="col-sm-12 col-md-4">
                                 <div class="dirRtl">
                                     <p>שמי אור יוסף בוצ'ן, אדריכל בתחילת הדרך. בוגר המסלול לארכיטקטורה <span dir="ltr">B.Arch</span> באוניברסיטת אריאל בשומרון (2019).</p>
                                     <p>מאז ומתמיד עולם היצירה, העיצוב והאסתטיקה  היה לחלק בלתי נפרד מחיי, בעולם הארכיטקטורה אני מרגיש הזדמנות פז להגשים את יצרי אלה.</p>
                                     <p>בזמני הפנוי אוהב לטייל להיחשף לתרבויות, מאכלים, מבנים ונופים חדשים. נהנה מאוד מספורט, ספורט אתגרי, משתדל לבקר בים לפחות פעמיים בשבוע גם אם יורד גשם בחוץ.</p>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-sm-12 col-md-4">
                                 <div class="dirRtl">
                                     <p>עקרון המנחה אותי בתכנון הוא לשאוף ליצור הרמוניה בין האדם והמרחב שלבסוף ישרו את תחושת המקום.</p>
                                     <p>מפגש בין פשטות ומורכבות, שימוש בטכנולוגיה מתקדמת על פי עקרונות מסורתיים.</p>
@@ -132,17 +156,17 @@
                     <div class="col-sm-12 col-lg-8">
                         <hr>
                         <div class="row">
-                            <div class="col-sm-12 col-md-4">
+                            <div class="col-sm-12 col-md-4 iconCenter">
                                 <a href="#">
                                     <img src="pictures/EmailLogo.png" alt="" width="30" height="30" class="d-inline-block align-top"> or35bo@gmail.com
                                 </a>
                             </div>
-                            <div class="col-sm-12 col-md-4">
+                            <div class="col-sm-12 col-md-4 iconCenter">
                                 <a href="#">
                                     <img src="pictures/PhoneLogo.PNG" alt="" width="30" height="30" class="d-inline-block align-top"> (+972) 0526319328
                                 </a>
                             </div>
-                            <div class="col-sm-12 col-md-4">
+                            <div class="col-sm-12 col-md-4 iconCenter">
                                 <a href="#">
                                     <img src="pictures/CvLogo.PNG" alt="" width="30" height="30" class="d-inline-block align-top"> Josef Or Bochan CV
                                 </a>
@@ -153,6 +177,89 @@
                     <div class="col"></div>
                 </div>
             </div>
+
+            <div class="sectionLight">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="row">
+                            <div class="col-sm-12 col-lg-4">
+                                <img class="img-fluid imgCenter" src="pictures/ashdodoit.jpg">
+<!--
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <button class="btn btn-light btn-lg btnCenter" type="button" data-toggle="modal" data-target=".bd-kf-modal-lg">Ashdodit</button>
+                                    </div>
+                                </div>
+-->
+                            </div>
+                            <div class="col-sm-12 col-lg-4">
+                                <img class="img-fluid imgCenter" src="pictures/blackdoom.jpg">
+<!--
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <button class="btn btn-success btn-lg btnCenter" type="button" data-toggle="modal" data-target=".bd-kf-modal-lg">Blackdoom</button>
+                                    </div>
+                                </div>
+-->
+                            </div>
+                            <div class="col-sm-12 col-lg-4">
+                                <img class="img-fluid imgCenter" src="pictures/finalBuildingSimulation.jpg">
+<!--
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <button class="btn btn-success btn-lg btnCenter" type="button" data-toggle="modal" data-target=".bd-kf-modal-lg">Final</button>
+                                    </div>
+                                </div>
+-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Modal -->
+
+        <!-- Home Modal -->
+        <div class="modal fade" id="homeModal" tabindex="-1" aria-labelledby="homeModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="headerLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="img-fluid" src="pictures/finalBuildingSimulation.jpg">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="modalFormWrapper">
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="formGroupExampleInput" class="form-label">Example label</label>
+                                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="formGroupExampleInput2" class="form-label">Another label</label>
+                                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+<!--                <button type="button" class="btn btn-primary">Save changes</button>-->
+              </div>
+            </div>
+          </div>
         </div>
 
 
