--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="bootstrap-4.5.2-dist/css/bootstrap.min.css">
         <!--CSS-->
         <link rel="stylesheet" href="main.css">
+        <script src="https://kit.fontawesome.com/2cdf82e520.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -217,6 +218,29 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="footer bg-dark">
+            <div class="containter-fluid">
+                <div class="row">
+                    <div class="col-sm-12 col-md-3">
+                        <img class="footerImg" src="pictures/Logo.png">
+                    </div>
+                    <div class="col-sm-12 col-md-9 socialWrapper">
+                        <a href="https://facebook.com" target="_blank">
+                            <i class="fab fa-facebook-square fa-2x"></i>
+                        </a>
+                        <a href="https://instagram.com" target="_blank">
+                            <i class="fab fa-instagram fa-2x"></i>
+                        </a>
+                        <a href="https://linkedin.com" target="_blank">
+                            <i class="fab fa-linkedin-in fa-2x"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
 
 
         <!-- Modal -->
